story(ccls-1970): add applications query endpoint (#21)
